--- a/elec_production_time_series.ipynb
+++ b/elec_production_time_series.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOwoGTfNKZ7aA8+EReQ13oy",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/RajeshMTRA/ml-projects/blob/main/elec_production_time_series.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -53,7 +65,7 @@
         "id": "UqGR0kZmhxIG",
         "outputId": "b5467b89-c481-460f-bfb4-66aa640e07de"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -355,7 +367,7 @@
         "id": "xAbLur-0iUKF",
         "outputId": "36f4f89c-bc5c-4c13-9202-2202bcf78f16"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -651,7 +663,7 @@
       "metadata": {
         "id": "NvtojjjSvQYl"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -669,7 +681,7 @@
         "id": "xa0cfWSYwSJ2",
         "outputId": "882676c7-9556-44cf-b433-c8c0e85bfbea"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -718,7 +730,7 @@
       "metadata": {
         "id": "0f4oJ9qQifAl"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -736,7 +748,7 @@
         "id": "kIpJYxJcwnul",
         "outputId": "33c01bf2-d069-4a8e-c2ec-348268626f01"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -774,7 +786,7 @@
         "id": "NFmXloFywqjU",
         "outputId": "284c61ff-eb42-47f4-cfd5-7a03d69fc7c0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -804,7 +816,7 @@
         "id": "LZ74ZUD7udTO",
         "outputId": "ada12a48-8250-41b3-a25f-f100801f517f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1120,7 +1132,7 @@
         "id": "OLkAvfwQuoOU",
         "outputId": "209405a9-2953-454a-bac5-312dc1b0715f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1446,7 +1458,7 @@
         "id": "aAuq7iS8nC1k",
         "outputId": "0c0f514e-a287-490b-dce6-c1d7465cb6e5"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1488,7 +1500,7 @@
         "id": "TduAKRfnnphF",
         "outputId": "26b373ca-2476-43d0-d893-a8e48ea65dd1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1542,7 +1554,7 @@
         "id": "ekFQFYGOpPnE",
         "outputId": "ff7bb00a-2dbf-4056-e12f-6dba2ed9c5e9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1606,7 +1618,7 @@
         "id": "HL_M_UJNm7Ox",
         "outputId": "15628ec2-3f23-47b5-e495-3414e95c04d0"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1637,7 +1649,7 @@
         "id": "busCWSwE8JNI",
         "outputId": "0d58f71b-d05c-4984-f91e-5983cb61e9d5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1680,7 +1692,7 @@
         "id": "f1QTWocB8QlH",
         "outputId": "c576a2b8-c925-4448-8a73-051b175d5358"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1731,7 +1743,7 @@
       "metadata": {
         "id": "PusdjKvGoIOB"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1747,7 +1759,7 @@
         "id": "odyuqKqGob2a",
         "outputId": "1da7a70b-0a9f-40c0-eccc-a5b999b8fe05"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1784,7 +1796,7 @@
         "id": "3nothbdttBKB",
         "outputId": "fe8941ac-f96e-4477-d1bd-80901fbcc72a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2115,7 +2127,7 @@
         "id": "vVYAjdS91KZJ",
         "outputId": "09deee9d-6b4d-4db7-d738-e92976395c80"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2152,7 +2164,7 @@
         "id": "g1V7I6gPPFYu",
         "outputId": "97312ffd-4133-4804-bd0e-11b7f6b38a00"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2505,7 +2517,7 @@
         "id": "XwqgbWvaGdSv",
         "outputId": "bb8580cc-7b5a-4479-b996-e2c84510688e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2540,7 +2552,7 @@
         "id": "KThzHqXuoRT1",
         "outputId": "960abe9f-2f1b-4353-80d5-e51307f1a488"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2586,7 +2598,7 @@
         "id": "6BtnBhvnepdW",
         "outputId": "23a1cfda-256f-4e23-c9a1-0b2ba090600e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2628,7 +2640,7 @@
         "id": "bdQdl09EqNjF",
         "outputId": "23b3f6b9-f6ee-4497-d59d-76015381849f"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2669,7 +2681,7 @@
         "id": "nYxC6TX7tGun",
         "outputId": "1f7bb531-e8fe-4fb4-e69f-0c07476378e9"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2784,7 +2796,7 @@
         "id": "F5F_D4lytR8m",
         "outputId": "9b8eaaf4-92ff-40fc-9c58-79f37990bfca"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2825,7 +2837,7 @@
         "id": "pHBctBGWHy66",
         "outputId": "0e927768-15dd-4f22-e3c6-b6ddc8d335d4"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2868,7 +2880,7 @@
         "id": "ptTr2gRczra9",
         "outputId": "407e70e7-a7d5-4e95-cffd-7230b30633ab"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2996,7 +3008,7 @@
         "id": "dpUlG6Q7HcDi",
         "outputId": "0374f91e-0b36-4caf-8c8d-f4e578e98e26"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
